learn/istio/request-timeout/example-v1/nginx-conf.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: timeout
